# PMessenger-Server

./: .gitignore  CMakeLists.txt  DatabaseQueries.sql  KeyWords.hpp  README.md  SelfDestructorFuture.cpp  SelfDestructorFuture.h  Server.cpp  main.cpp  makefile
AsyncServerFramework/: AbstractAsyncServer.h  BasicNetIOManager.h  INetMessageProcessor.h  INetWriter.h  Session.h
AsyncServerFramework/io/: BasicNetMessage.h
ServerPackages/: ClientConnection.hpp  DatabaseConnector.hpp  NetworkHandler.hpp  ServerRequestHandler.hpp
include/: Server.cpp  Server.hpp  ServerRequestHandler.hpp  stringTools.hpp
include/DataHandling/: DatabaseConnector.hpp
include/NetIO/: MessageBodyDeserializer.cpp  MessageBodyDeserializer.hpp  NetMessages.cpp  NetMessages.hpp
